edge/log/build_2026-03-29_20-51-30/bishe_streamer/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.16 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.9 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 4.9.0 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found image_transport: 3.1.12 (/opt/ros/humble/share/image_transport/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found bishe_msgs: 0.1.0 (/home/jetson/projects/bishe/edge/install/bishe_msgs/share/bishe_msgs/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jetson/projects/bishe/edge/build/bishe_streamer
Consolidate compiler generated dependencies of target intercom_node
Consolidate compiler generated dependencies of target streamer_node
[ 25%] Building CXX object CMakeFiles/intercom_node.dir/src/intercom_node.cpp.o
[ 75%] Built target streamer_node
/home/jetson/projects/bishe/edge/src/bishe_streamer/src/intercom_node.cpp: In member function ‘void IntercomNode::startStream(const string&)’:
/home/jetson/projects/bishe/edge/src/bishe_streamer/src/intercom_node.cpp:50:36: error: invalid operands of types ‘const char [10]’ and ‘const char*’ to binary ‘operator+’
   50 |             "rtspsrc", "location=" + url.c_str(), "latency=0",
      |                        ~~~~~~~~~~~ ^ ~~~~~~~~~~~
      |                        |                      |
      |                        const char [10]        const char*
gmake[2]: *** [CMakeFiles/intercom_node.dir/build.make:76：CMakeFiles/intercom_node.dir/src/intercom_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:165：CMakeFiles/intercom_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
